fix: enhance layout by centering main content and adjusting title alignment

--- a/chamber/styles/discover-base.css
+++ b/chamber/styles/discover-base.css
@@ -14,6 +14,13 @@
 
 /* MAIN */
 
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 /* Hero */
 
 #hero {
@@ -88,6 +95,10 @@
     max-height: 80em;
 }
 
+.title{
+    text-align: center;
+}
+
 .demo-card{
     display: flex;
     flex-direction: column;
@@ -95,6 +106,10 @@
     justify-content: center;
     text-align: center;
     margin: 1.5em 0;
+}
+
+.dem-button{
+    margin: 0 auto;
 }
 
 /* .demo-card.hide{
